related course spacing fixes

--- a/assets/scss/responsive/_medium.scss
+++ b/assets/scss/responsive/_medium.scss
@@ -45,7 +45,8 @@
 	.mto-related-post {
 		.mto-single-course-item {
 			flex-direction: column;
-		}
+      gap: 14px;
+		} 
 	}
 
 	.mto-single-course--main {
